--- a/style.css
+++ b/style.css
@@ -169,3 +169,110 @@ h4{
     padding-right: 8rem;
     border-spacing: 1.5rem;
 }
+
+.btn2{
+    color: #fff;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+    border-radius: 30px;
+    padding: 1rem 2rem;
+    text-decoration: none;
+}
+
+.section-title {
+    position: relative;
+    display: inline-block;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #17a2b8;
+}
+
+.mb-4{
+    font-weight: bold;
+    line-height: 1.2;
+    color: #00394f;
+    font-size: calc(1.375rem + 1.5vw);
+}
+
+.py-2{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #666666;
+    border-top: 1px solid #dee2e6;
+
+}
+
+#last-py{
+    border-bottom: 1px solid #dee2e6;
+}
+
+.text-center {
+    text-align: center !important;
+    padding: 0rem 8rem;
+    padding-top: 2rem;
+}
+
+.cards{
+    padding-left: 8rem;
+    padding-right: 8rem;
+    border-spacing: 2rem 0;
+    
+}
+
+.card{
+    width: 325px;
+}
+
+.card-title{
+    text-align: center;
+}
+
+.card-text{
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #666666;
+}
+
+.card-col{
+    border-top: 1px solid #dee2e6;
+    background-color: #f8f9fa;
+    border-radius: 5px;
+    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+}
+
+.col-6{
+    float: left;
+    color: #666666;
+}
+
+.ta{
+    width: 100%;    
+    border-spacing: 1rem;
+    border-top: 1px solid #dee2e6;
+    background-color: #f8f9fa;
+    border-radius: 5px;
+    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+    
+}
+
+.col-7{
+    text-align: right;
+    color: #666666;
+    
+}
+
+.btn3{
+    color: #fff;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+    border-radius: 30px;
+    padding: 0.5rem 1.5rem;
+    text-decoration: none;
+}
+
+.join-now{
+    text-align: center;
+}
