--- a/style.css
+++ b/style.css
@@ -2,16 +2,14 @@ body{
     margin: 0;
 }
 
-.logo{
-    text-decoration: none;
-}
-
 .header{
-    padding-top: 1rem;
-    padding-bottom: 4rem;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
     padding-left: 2rem;
     padding-right: 2rem;
     background-color: #f8f9fa;
+    height: 3vh;
+    width: 100vw;
 }
 
 .header a{
@@ -22,15 +20,55 @@ body{
     font-size: 18px;
     line-height: 25px;
     font-weight: bold;
+    font-family: "Nunito", sans-serif;
+}
+
+.navigation{
+    width: 100%;
+    height: 3vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.logo-part{
+    width: 25%;
+    height: 3vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo{
+    text-decoration: none;
+}
+
+.navbar{
+    width: 50%;
+    height: 3vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .navbar a{
     color: #00394f;
     border-radius: 4px;
+    font-family: "Nunito", sans-serif;
 }
 
 .navbar a:hover{
     color: #17a2b8;
+}
+
+.btn{
+    color: #fff;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+    border-radius: 30px;
+    font-family: "Nunito", sans-serif;
+    height: 20px;
+
 }
 
 [class^=flaticon-]:before,
@@ -66,27 +104,23 @@ body{
 
 .nav-item:hover .dropdown-menu {display: block;}
 
-.btn{
-    color: #fff;
-    background-color: #17a2b8;
-    border-color: #17a2b8;
-    border-radius: 30px;
-}
-
-
-
 .title{
     font-size: calc(1.275rem + 0.3vw);
     color: #fff;
+    font-family: "Handlee", cursive;
+    font-weight: bold;
 }
 
 .title1{
     color: #fff;
     font-size: calc(1.575rem + 3.9vw);
+    font-family: "Handlee", cursive;
+    font-weight: bold;
 }
 
 .para{
     color: #fff;
+    font-family: "Nunito", sans-serif;
 }
 
 .btn1{
@@ -96,6 +130,7 @@ body{
     border-radius: 30px;
     padding: 1rem 2rem;
     text-decoration: none;
+    font-family: "Nunito", sans-serif;
 }
 
 .img-src{
@@ -109,6 +144,7 @@ body{
     padding-right: 2rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    
 }
 
 .facilities{
@@ -122,6 +158,7 @@ h4{
     font-weight: bold;
     line-height: 1.2;
     color: #00394f;
+    font-family: "Handlee", cursive;
 }
 
 .flaticon-050-fence{
@@ -162,12 +199,14 @@ h4{
     font-weight: 400;
     line-height: 1.5;
     color: #666666;
+    font-family: "Nunito", sans-serif;
 }
 
 .learn-about-us{
     padding-left: 8rem;
     padding-right: 8rem;
     border-spacing: 1.5rem;
+    
 }
 
 .btn2{
@@ -177,6 +216,7 @@ h4{
     border-radius: 30px;
     padding: 1rem 2rem;
     text-decoration: none;
+    font-family: "Nunito", sans-serif;
 }
 
 .section-title {
@@ -185,6 +225,7 @@ h4{
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #17a2b8;
+    font-family: "Nunito", sans-serif;
 }
 
 .mb-4{
@@ -192,14 +233,17 @@ h4{
     line-height: 1.2;
     color: #00394f;
     font-size: calc(1.375rem + 1.5vw);
+    font-family: "Handlee", cursive;
 }
 
 .py-2{
     font-size: 1rem;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 2.5;
     color: #666666;
     border-top: 1px solid #dee2e6;
+    font-family: "Nunito", sans-serif;
+    list-style-type: none;
 
 }
 
@@ -208,7 +252,7 @@ h4{
 }
 
 .text-center {
-    text-align: center !important;
+    text-align: center;
     padding: 0rem 8rem;
     padding-top: 2rem;
 }
@@ -234,6 +278,7 @@ h4{
     font-weight: 400;
     line-height: 1.5;
     color: #666666;
+    font-family: "Nunito", sans-serif;
 }
 
 .card-col{
@@ -246,6 +291,7 @@ h4{
 .col-6{
     float: left;
     color: #666666;
+    font-family: "Nunito", sans-serif;
 }
 
 .ta{
@@ -261,6 +307,7 @@ h4{
 .col-7{
     text-align: right;
     color: #666666;
+    font-family: "Nunito", sans-serif;
     
 }
 
@@ -271,8 +318,131 @@ h4{
     border-radius: 30px;
     padding: 0.5rem 1.5rem;
     text-decoration: none;
+    font-family: "Nunito", sans-serif;
 }
 
 .join-now{
     text-align: center;
 }
+
+.book-seat{
+    padding: 3rem 8rem;
+    border-spacing: 2rem;
+}
+
+.text-white{
+    font-size: calc(1.375rem + 1.5vw);
+    font-family: "Handlee", cursive;
+    font-weight: bold;
+    line-height: 1.2;
+    color: white;
+}
+
+.card-header{
+    border-radius: 4px 4px 0 0;
+    background-color: #00394f;
+    text-align: center;
+    padding: 0.4rem 2rem;
+    width: 400px;
+}
+
+.card-body{
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: #17a2b8;
+    padding: 2.5rem 2.5rem;
+    
+}
+
+.form-control {
+    display: block;
+    width: 350px;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.book-seats{
+    font-family: "Nunito", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #666666;
+    text-align: left;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+  }
+
+.custom-select {
+    display: inline-block;
+    width: 375px;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 1.75rem 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+
+}
+
+.btn4{
+    width: 375px;
+    color: #fff;
+    background-color: #00394f;
+    border-color: #00394f;
+    border-radius: 30px;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    font-family: "Nunito", sans-serif;
+}
+
+.teachers{   
+    padding: 0 8rem;
+}
+
+.teachers-div{
+    text-align: center;
+}
+
+.teach{
+    padding: 0 8rem;
+    border-spacing: 1rem;
+    text-align: center;
+}
+
+.fa{
+    color: #17a2b8;
+    padding-right: 0.5rem;
+}
+
+.im{
+    width: 250px;
+    height: 250px;
+    border-radius: 150px;
+}
+
+.im:hover{
+    opacity: 1;
+}
+
+.team .team-social {
+    top: 0;
+    background: rgba(23, 162, 184, 0.8);
+    opacity: 0;
+    z-index: 1;
+    transition: .5s;
+  }
+  
